--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,7 @@ requires-python = ">=3.11"
 dependencies = [
     "django>=5.1.6",
     "gunicorn>=23.0.0",
+    "mysqlclient==2.2.7",
     "psycopg>=3.2",
     "whitenoise>=6.9.0",
 ]
